--- a/saudiSubscription/ViewController/Controller/SubscriptionTableViewCell.xib
+++ b/saudiSubscription/ViewController/Controller/SubscriptionTableViewCell.xib
@@ -10,44 +10,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="subscriptionTableViewCell" rowHeight="112" id="KGk-i7-Jjw" customClass="subscriptionTableViewCell" customModule="saudiSubscription" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="341" height="112"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="infoEndDateSubscription" rowHeight="47" id="KGk-i7-Jjw" customClass="SubscriptionTableViewCell" customModule="saudiSubscription" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="341" height="112"/>
+                <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="fdC-F2-LJk">
-                        <rect key="frame" x="0.0" y="0.0" width="341" height="112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="jrW-g7-kuB">
-                                <rect key="frame" x="0.0" y="0.0" width="341" height="56"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZF-M5-iYk">
-                                        <rect key="frame" x="0.0" y="0.0" width="170.5" height="56"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s3L-uX-LMI">
-                                        <rect key="frame" x="170.5" y="0.0" width="170.5" height="56"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ULx-jj-y9i">
-                                <rect key="frame" x="0.0" y="56" width="341" height="56"/>
+                                <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-6K-Oxi">
-                                        <rect key="frame" x="0.0" y="0.0" width="170.5" height="56"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178.5" height="47"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cn9-Vl-Lpv">
-                                        <rect key="frame" x="170.5" y="0.0" width="170.5" height="56"/>
+                                        <rect key="frame" x="178.5" y="0.0" width="178.5" height="47"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="A4k-pq-DHZ"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -67,11 +53,9 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="subscriptionEndDate" destination="Cn9-Vl-Lpv" id="HCI-Kg-Kqf"/>
-                <outlet property="subscriptionEndDateLabel" destination="IZF-M5-iYk" id="Pdm-RU-FNi"/>
                 <outlet property="subscriptionName" destination="Dx0-6K-Oxi" id="P5t-jW-7xP"/>
-                <outlet property="subscriptionNameLabel" destination="s3L-uX-LMI" id="tXS-rp-T54"/>
             </connections>
-            <point key="canvasLocation" x="152.89855072463769" y="127.90178571428571"/>
+            <point key="canvasLocation" x="141.30434782608697" y="95.424107142857139"/>
         </tableViewCell>
     </objects>
 </document>
