--- a/saudiSubscription/ViewController/StoryBoard/SubscriptionValueViewCell.xib
+++ b/saudiSubscription/ViewController/StoryBoard/SubscriptionValueViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="infoEndDateSubscription" rowHeight="47" id="KGk-i7-Jjw" customClass="SubscriptionTableViewCell" customModule="saudiSubscription" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SubscriptionValue" rowHeight="47" id="KGk-i7-Jjw" customClass="SubscriptionValueViewCell" customModule="saudiSubscription" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -23,13 +23,13 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ULx-jj-y9i">
                                 <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-6K-Oxi">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-6K-Oxi">
                                         <rect key="frame" x="0.0" y="0.0" width="178.5" height="47"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cn9-Vl-Lpv">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cn9-Vl-Lpv">
                                         <rect key="frame" x="178.5" y="0.0" width="178.5" height="47"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="47" id="A4k-pq-DHZ"/>
@@ -52,8 +52,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="subscriptionEndDate" destination="Cn9-Vl-Lpv" id="HCI-Kg-Kqf"/>
-                <outlet property="subscriptionName" destination="Dx0-6K-Oxi" id="P5t-jW-7xP"/>
+                <outlet property="subscriptionEndDate" destination="Dx0-6K-Oxi" id="P5t-jW-7xP"/>
+                <outlet property="subscriptionName" destination="Cn9-Vl-Lpv" id="HCI-Kg-Kqf"/>
             </connections>
             <point key="canvasLocation" x="141.30434782608697" y="95.424107142857139"/>
         </tableViewCell>
