--- a/saudiSubscription/ViewController/StoryBoard/IPOsTitleTableViewCell.xib
+++ b/saudiSubscription/ViewController/StoryBoard/IPOsTitleTableViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="subscriptionTitle" rowHeight="59" id="KGk-i7-Jjw" customClass="SubscriptionTitleTableViewCell" customModule="saudiSubscription" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IPOTitle" rowHeight="59" id="KGk-i7-Jjw" customClass="IPOsTitleTableViewCell" customModule="saudiSubscription" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -47,8 +46,8 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="subscriptionEndDate" destination="Q0j-8r-ukJ" id="vO8-E0-Tjk"/>
-                <outlet property="subscriptionName" destination="tyv-E5-Ta5" id="JFP-0b-Xnd"/>
+                <outlet property="offerEndDate" destination="Q0j-8r-ukJ" id="vO8-E0-Tjk"/>
+                <outlet property="offerName" destination="tyv-E5-Ta5" id="JFP-0b-Xnd"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="133.59375"/>
         </tableViewCell>
