--- a/saudiSubscription/ViewController/StoryBoard/IPOsValueViewCell.xib
+++ b/saudiSubscription/ViewController/StoryBoard/IPOsValueViewCell.xib
@@ -10,53 +10,54 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IPOValue" rowHeight="47" id="KGk-i7-Jjw" customClass="IPOsValueViewCell" customModule="saudiSubscription" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="IPOValue" rowHeight="40" id="KGk-i7-Jjw" customClass="IPOsValueViewCell" customModule="saudiSubscription" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="357" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
+                <rect key="frame" x="0.0" y="0.0" width="357" height="40"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="fdC-F2-LJk">
-                        <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ULx-jj-y9i">
+                        <rect key="frame" x="5" y="5" width="347" height="30"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ULx-jj-y9i">
-                                <rect key="frame" x="0.0" y="0.0" width="357" height="47"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-6K-Oxi">
-                                        <rect key="frame" x="0.0" y="0.0" width="178.5" height="47"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cn9-Vl-Lpv">
-                                        <rect key="frame" x="178.5" y="0.0" width="178.5" height="47"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="47" id="A4k-pq-DHZ"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dx0-6K-Oxi">
+                                <rect key="frame" x="0.0" y="0.0" width="171" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cn9-Vl-Lpv">
+                                <rect key="frame" x="176" y="30" width="171" height="0.0"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="47" id="A4k-pq-DHZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="hye-XH-hEN"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="fdC-F2-LJk" secondAttribute="bottom" id="4wo-Ta-PnJ"/>
-                    <constraint firstAttribute="trailing" secondItem="fdC-F2-LJk" secondAttribute="trailing" id="9KB-qR-80E"/>
-                    <constraint firstItem="fdC-F2-LJk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BoM-IE-hdT"/>
-                    <constraint firstItem="fdC-F2-LJk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="E51-zY-WCC"/>
+                    <constraint firstAttribute="bottom" secondItem="ULx-jj-y9i" secondAttribute="bottom" constant="5" id="RUN-GX-R03"/>
+                    <constraint firstItem="ULx-jj-y9i" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="RkU-Yj-a8G"/>
+                    <constraint firstAttribute="trailing" secondItem="ULx-jj-y9i" secondAttribute="trailing" constant="5" id="aCI-UR-7Eu"/>
+                    <constraint firstItem="ULx-jj-y9i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="v7n-5e-toO"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="contentCell" destination="ULx-jj-y9i" id="hW9-NO-Ubp"/>
                 <outlet property="offerEndDate" destination="Dx0-6K-Oxi" id="P5t-jW-7xP"/>
                 <outlet property="offerName" destination="Cn9-Vl-Lpv" id="HCI-Kg-Kqf"/>
             </connections>
-            <point key="canvasLocation" x="141.30434782608697" y="95.424107142857139"/>
+            <point key="canvasLocation" x="139.85507246376812" y="100.44642857142857"/>
         </tableViewCell>
     </objects>
 </document>
